--- a/hw1/index.html
+++ b/hw1/index.html
@@ -3,5 +3,12 @@
 	</head>
 	<body>
 		Homework 1 index.html here
+
+		Task 1
+		Walk through how you rasterize triangles in your own words:
+		- We rasterize triangles by essnetially looking at each pixel and utilizing barycentric coordinates to calculate if they lie within the triangle. Then, we color it.
+		Explain how your algorithm is no worse than one that checks each sample within the bounding triangle.
+		- Because we limit the pixels we check from 0 to x-max and y-max, this stays within the bounding triangle and shows our algorithm is now worse than one that checks each sample within the bounding triangle.
+		- 
 	</body>
 </html>
