--- a/hw1/index.html
+++ b/hw1/index.html
@@ -9,6 +9,7 @@
 		- We rasterize triangles by essnetially looking at each pixel and utilizing barycentric coordinates to calculate if they lie within the triangle. Then, we color it.
 		Explain how your algorithm is no worse than one that checks each sample within the bounding triangle.
 		- Because we limit the pixels we check from 0 to x-max and y-max, this stays within the bounding triangle and shows our algorithm is now worse than one that checks each sample within the bounding triangle.
-		- 
+		PNG Screenshot of basic/test4.svg
+		![Alt text](relative%20path/to/img.jpg?raw=true "Title")
 	</body>
 </html>
