--- a/hw1/index.html
+++ b/hw1/index.html
@@ -10,6 +10,6 @@
 		Explain how your algorithm is no worse than one that checks each sample within the bounding triangle.
 		- Because we limit the pixels we check from 0 to x-max and y-max, this stays within the bounding triangle and shows our algorithm is now worse than one that checks each sample within the bounding triangle.
 		PNG Screenshot of basic/test4.svg
-		![Alt text](relative%hw1/task1.png?raw=true "Title")
+		![Alt text](relative%task1.png?raw=true "Title")
 	</body>
 </html>
